I make changes in responsiveness

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <div class="hello">Hi I am</div>
                     <div class="name">Shraddha Shukla</div>
                     <div class="about">Developer, Artist</div>
-                    <div class="moreabout">I am a full stack web developer. I make websites by using HTML, CSS, Js without any framework and also with framework Angular. Also I love art and make Canvas Paintings, Sketches and Portraits. I love travelling and reading non-fictional books.</div>
+                    <div class="moreabout">I am a full stack web developer. I make websites by using HTML, CSS, Js without any framework and also with framework Angular. Also I love art and make Canvas Paintings, Sketches and Portraits. I love travelling and reading non-fictional books.</>
+                    </div>
                     <div class="button">
                         <a href="./ss_resume.pdf" target="_blank">
                         <button class="btn">Download CV</button></a>
