--- a/intro.html
+++ b/intro.html
@@ -26,15 +26,19 @@
             </div>
             <div class="intro">
                 <h2>About Me</h2>
-                <p>I am a B.Tech 3rd year IT student. I am a Full Stack Web Developer. I have learned Angular. Also I am a self taught artist. My art domains are Canvas Painting, Portrait Making, Doodling and Sketching.</p>
+                <p>I am a B.Tech 3rd(6th sem) year IT student. I am a Full Stack Web Developer. I have learned MERN STACK Development. Also I am a self taught artist. My art domains are Canvas Painting, Portrait Making, Doodling and Sketching.</p>
                 <h2>My Skills</h2>
                 <div class="skillcontainer">
                    <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Angular</li>
                         <li>Python</li>
+                        <li>Java</li>
+                        <li>ReactJs</li>
+                        <li>ExpressJs</li>
+                        <li>Nodejs</li>
+                        <li>Mongodb</li>
+                        <li>SQL(Basics)</li>
                         <li>Art</li>
                    </ul>
                 </div>
