--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
                 <div id="services">
                     <div class="box">
                         <h2>Web Designing</h2>
-                        <p>I am a full stack web developer. I have been made 2 websites.</p>
+                        <p>I am a full stack web developer. I have been made 2 websites. And right now I'm working on one blood donation website in which i'm integrating AI chatbot also.</p>
                     </div>
                     <div class="box">
                         <h2>UI/UX Designing</h2>
